[gd_scene load_steps=11 format=3 uid="uid://vh5jwq5a514g"]

[ext_resource type="Script" uid="uid://b8lkiuvyds6st" path="res://escenas/enemies/globo/globo.gd" id="1_eak8y"]
[ext_resource type="Texture2D" uid="uid://cddlqs3hd6b53" path="res://assets/enemies/globo/Globo_enemigo_sprite_1.png" id="1_od82q"]
[ext_resource type="Texture2D" uid="uid://b1vay8mgh5qw4" path="res://assets/enemies/globo/Globo_enemigo_sprite_2.png" id="2_eak8y"]
[ext_resource type="Texture2D" uid="uid://c4mqlvh1yx1be" path="res://assets/enemies/globo/Globo_enemigo_sprite_3.png" id="3_6bvti"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kn3vy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_od82q")
}, {
"duration": 1.0,
"texture": ExtResource("2_eak8y")
}, {
"duration": 1.0,
"texture": ExtResource("3_6bvti")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lgqff"]
radius = 17.0
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eak8y"]
size = Vector2(1601, 244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bvti"]
size = Vector2(1672, 243)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn3vy"]
size = Vector2(20, 244)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eak8y"]
radius = 17.0
height = 52.0

[node name="Globo" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_eak8y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kn3vy")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_lgqff")
debug_color = Color(0.984314, 0, 0, 0)

[node name="Colision_Derecha" type="RayCast2D" parent="."]
target_position = Vector2(24, 0)

[node name="Colision_Izquierda" type="RayCast2D" parent="."]
target_position = Vector2(-24, 0)

[node name="Attack" type="Node2D" parent="."]

[node name="Derecha" type="Area2D" parent="Attack"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/Derecha"]
position = Vector2(817.5, -73)
shape = SubResource("RectangleShape2D_eak8y")
debug_color = Color(0.827451, 0.396078, 0, 0)

[node name="Izquierda" type="Area2D" parent="Attack"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/Izquierda"]
position = Vector2(-854, -73.5)
shape = SubResource("RectangleShape2D_6bvti")
debug_color = Color(0.827451, 0.396078, 0, 0)

[node name="Centro" type="Area2D" parent="Attack"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/Centro"]
position = Vector2(0, -73)
shape = SubResource("RectangleShape2D_kn3vy")
debug_color = Color(0.827451, 0.396078, 0, 0)

[node name="Da単o" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Da単o"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_eak8y")
debug_color = Color(0.956863, 0, 0, 0)

[connection signal="body_entered" from="Attack/Derecha" to="." method="_on_derecha_body_entered"]
[connection signal="body_exited" from="Attack/Derecha" to="." method="_on_derecha_body_exited"]
[connection signal="body_entered" from="Attack/Izquierda" to="." method="_on_izquierda_body_entered"]
[connection signal="body_exited" from="Attack/Izquierda" to="." method="_on_izquierda_body_exited"]
[connection signal="body_entered" from="Attack/Centro" to="." method="_on_centro_body_entered"]
[connection signal="body_exited" from="Attack/Centro" to="." method="_on_centro_body_exited"]
[connection signal="body_entered" from="Da単o" to="." method="_on_da単o_body_entered"]
